Update works sporadically, needs to reload

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,10 +35,7 @@
                                     {{this.id}}
                                 </td>
                                 <td>
-                                    <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-                                        <input type="hidden" name="devoured" value="true">
-                                        <button class="btn yellow accent-4" type="submit"> MONCH! </button>
-                                    </form>
+                                    <button data-id="{{id}}" id="eat_burg" class="btn yellow accent-4" type="submit">MONCH!</button>
                                 </td>
                             </tr>
                             {{/unless}}
@@ -47,6 +44,28 @@
                 </table>
             </div>
         </div>
+
+    <script type="text/javascript"> //Script for sending PUT request
+        $("#eat_burg").on("click", function(event) {
+            var id = $(this).data("id");
+
+            var newDevourState = {
+            devoured: true
+            };
+
+            // Send the PUT request.
+            $.ajax("/burgers/update/" + id, {
+            type: "PUT",
+            data: newDevourState
+            }).then(
+            function() {
+                console.log("changed devoured state to ", devoured);
+                // Reload the page to get the updated list
+                location.reload();
+            }
+            );
+        });
+    </script>
 
 <!--BURGERS THAT HAVE BEEN EATEN-->
         
