--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,10 +2,9 @@
     <div class="nav-wrapper red accent-3">
         <a href="#!" class="brand-logo" style="font-size: 35px;"><img src="/images/burger_icon.png" style="height: 50px; vertical-align:middle; margin-bottom: 10px"> BORGAR EET</a>
         <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-        <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-        <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-        <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+        <li><a href="https://github.com/wsatchmo/Borgar"><i class="material-icons">search</i></a></li>
+        <li><a href="https://wsatchmo.github.io/Bootstrap-Portfolio/portfolio.html"><i class="material-icons">view_module</i></a></li>
+        <li><a href="/"><i class="material-icons">refresh</i></a></li>
         </ul>
     </div>
 </nav>
