--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,10 +14,10 @@
     <div class="row">
         <div class="col m5">
             <div class="card">
-                <h2 style="margin-top: 1.95rem; text-align: center">BORGARZ</h2>
+                <h2 id="borgarz" style="margin-top: 1.95rem; text-align: center">BORGARZ</h2>
 
                 <h3 style="text-align: center">Eet Dem Burgz</h3>
-                <table style="margin-bottom: 80px;">
+                <table style="margin-bottom: 10px;">
                     <thead>
                         <th>Borgar</th>
                         <th>ID No.</th>
