--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 @media only screen and (max-width: 700px) {
-    .borgarz {
+    #borgarz {
       font-size: 25px;
     }
   }
@@ -13,7 +13,7 @@ body{
     .card {
       width: 100%;
     }
-    .brand-logo {
+    #logo {
       font-size: 20px;
     }
   }
