--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper red accent-3">
-        <a href="#!" id="logo" class="brand-logo" style="font-size: 30px;"><img src="/images/burger_icon.png" style="height: 50px; vertical-align:middle; margin-bottom: 10px"> BORGAR EET</a>
+        <a href="#!" class="brand-logo" style="font-size: 30px;"><img src="/images/burger_icon.png" style="height: 50px; vertical-align:middle; margin-bottom: 10px"><p id="logo"> BORGAR EET</p></a>
         <ul class="right hide-on-med-and-down">
         <li><a href="https://github.com/wsatchmo/Borgar"><i class="material-icons">search</i></a></li>
         <li><a href="https://wsatchmo.github.io/Bootstrap-Portfolio/portfolio.html"><i class="material-icons">view_module</i></a></li>
