--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,7 @@ body{
     .card {
       width: 100%;
     }
-    #logo {
-      font-size: 20px;
+    .brand-ogo {
+      width: 100%;
     }
   }
