--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,30 +1,30 @@
 html{
-    min-width: 355px;
+    min-width: 340px;
 }
 
 body{
     background-image: url("../images/burger.jpg");
     background-repeat: repeat;  
-    min-width: 355px;
+    min-width: 340px;
 }
 
 /* MEDIA QUERIES */
 
 @media only screen and (max-width: 700px) {
-    #borgarz {
-      font-size: 30px;
-    }
-    .eat_burg{
-        padding-left: 5px;
-        padding-right: 5px;
-    }
+  #borgarz {
+    font-size: 30px;
   }
+  .eat_burg{
+      padding-left: 5px;
+      padding-right: 5px;
+  }
+}
 
 @media only screen and (max-width: 600px) {
-    .card {
-      width: 100%;
-    }
-    .brand-ogo {
-      width: 100%;
-    }
+  .card {
+    width: 100%;
   }
+  .brand-logo {
+    width: 100%;
+  }
+}
