--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -77,7 +77,7 @@
         </div>
 
         <!--ADDIN' BURGERS-->
-        <div class="col m12 card" style="margin-bottom: 80px; padding-bottom: 20px">
+        <div class="col m12 s12 card" style="margin-bottom: 80px; padding-bottom: 20px">
             <h4> Add Borgar </h3>
             <form class="create-update-form"  action="burgers/create" method="POST">
 
